--- a/AnimalPredVercel/frontend/index.html
+++ b/AnimalPredVercel/frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Animal Predictor</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='frontend/style.css') }}" type="text/css">
+
 </head>
 <body>
     <div class="container">
